Updated design with tweaks.

--- a/index.html
+++ b/index.html
@@ -73,15 +73,19 @@
 
                     <div class="col span_6">
 
-                        <img src="images/flourish-about.png" class="flourish">
-
                         <h2>Our Story</h2>
 
-                        <p>Lucas ipsum dolor sit amet jade mustafar leia grievous coruscant darth lando qui-gon yoda solo. Amidala organa greedo lando fisto k-3po binks kenobi. Watto cade ponda sebulba skywalker solo. Baba hutt yavin ventress boba ewok grievous r2-d2 yavin. Yavin mace baba skywalker antilles kessel. Ben c-3p0 qui-gonn organa wedge windu kashyyyk. Hutt greedo bespin skywalker. Fett skywalker hoth kamino yoda lobot grievous wedge. Leia moff luuke binks jinn. Windu hutt fett darth. Thrawn darth windu kashyyyk amidala chewbacca. </p>
+                        <img src="images/flourish-about.png" class="flourish">
 
-                        <p>Binks darth luke dooku dagobah skywalker. Jango solo darth sebulba darth ahsoka mara. Mon maul windu darth naboo kit. Jinn hutt skywalker mara cade mandalore mara. Han jawa windu mandalore padmé maul ponda. Mustafar wedge binks mace. Calamari yavin mara ahsoka padmé ponda. Hutt calrissian gonk sidious sidious kit. Darth kessel qui-gon mothma dantooine darth qui-gonn darth. Skywalker han boba solo. Grievous yoda coruscant thrawn grievous sith kessel sidious skywalker. Hutt leia leia leia luuke jade solo han. </p>
+                        <div class="storytext">
 
-                        <p>Yoda palpatine darth sidious yoda darth. Palpatine hutt lando moff. Sidious jawa darth calrissian moff jade. Fisto padmé luuke endor ackbar tatooine. Kashyyyk hutt ponda hutt wicket yoda dagobah. Ewok hutt r2-d2 mustafar binks naboo moff kenobi bespin. Mace leia darth fett moff dantooine darth. Kenobi owen ben solo sebulba solo darth utapau. Dagobah darth kessel biggs. Hutt leia luke hoth calamari han sidious han sith. Jawa jar amidala c-3p0 c-3po. Sebulba binks owen twi'lek antilles grievous. Alderaan mon organa droid mara ewok coruscant moff boba. </p>
+                            <p>Lucas ipsum dolor sit amet jade mustafar leia grievous coruscant darth lando qui-gon yoda solo. Amidala organa greedo lando fisto k-3po binks kenobi. Watto cade ponda sebulba skywalker solo. Baba hutt yavin ventress boba ewok grievous r2-d2 yavin. Yavin mace baba skywalker antilles kessel. Ben c-3p0 qui-gonn organa wedge windu kashyyyk. Hutt greedo bespin skywalker. Fett skywalker hoth kamino yoda lobot grievous wedge. Leia moff luuke binks jinn. Windu hutt fett darth. Thrawn darth windu kashyyyk amidala chewbacca. </p>
+
+                            <p>Binks darth luke dooku dagobah skywalker. Jango solo darth sebulba darth ahsoka mara. Mon maul windu darth naboo kit. Jinn hutt skywalker mara cade mandalore mara. Han jawa windu mandalore padmé maul ponda. Mustafar wedge binks mace. Calamari yavin mara ahsoka padmé ponda. Hutt calrissian gonk sidious sidious kit. Darth kessel qui-gon mothma dantooine darth qui-gonn darth. Skywalker han boba solo. Grievous yoda coruscant thrawn grievous sith kessel sidious skywalker. Hutt leia leia leia luuke jade solo han. </p>
+
+                            <p>Yoda palpatine darth sidious yoda darth. Palpatine hutt lando moff. Sidious jawa darth calrissian moff jade. Fisto padmé luuke endor ackbar tatooine. Kashyyyk hutt ponda hutt wicket yoda dagobah. Ewok hutt r2-d2 mustafar binks naboo moff kenobi bespin. Mace leia darth fett moff dantooine darth. Kenobi owen ben solo sebulba solo darth utapau. Dagobah darth kessel biggs. Hutt leia luke hoth calamari han sidious han sith. Jawa jar amidala c-3p0 c-3po. Sebulba binks owen twi'lek antilles grievous. Alderaan mon organa droid mara ewok coruscant moff boba. </p>
+
+                        </div>
 
                     </div>
 
@@ -142,8 +146,8 @@
 
                 <div class="row">
                     <div class="col span_6">
-                        <img class="flourish" src="images/yellow-flourish-ceremony.png">
                         <h2>Ceremony</h2>
+                        <img class="flourish" src="images/yellow-flourish-ceremony.png">
                     </div>
                 </div>
 
@@ -170,9 +174,9 @@
 
                 <div class="row">
                     <div class="col span_6">
-                        <h2>Registry</h2>
-                        <p>Jim and Jamie are registered at the following retailers:</p>
+                        <h2>Gifts</h2>
                         <img class="flourish" src="images/gray-flourish-registry.png">
+                        <p>Jim and Jamie are registered at the following retailers:</p>
                     </div>
                 </div>
 
@@ -187,7 +191,7 @@
 
                 <div id="gifts" class="row">
                     <div class="col span_6">
-                        <h4>Wedding Gifts Accepted by Mail</h4>
+                        <h4>Gifts May Be Mailed to</h4>
                         <p>Jim &amp; Jamie<br>
                            1234 Main Street<br>
                            Anytown, USA 55555-5555
