Added Google Maps API for locations.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
 
                 <div class="row">
                     <div class="col span_6">
-                        <img src="images/french-castle.jpg">
+                        <div id="map-holder">
+                            <div id="map-canvas"></div>
+                        </div>
 
                         <p>Yoda palpatine darth sidious yoda darth. Palpatine hutt lando moff. Sidious jawa darth calrissian moff jade. Fisto padmé luuke endor ackbar tatooine. Kashyyyk hutt ponda hutt wicket yoda dagobah. Ewok hutt r2-d2 mustafar binks naboo moff kenobi bespin. Mace leia darth fett moff dantooine darth. Kenobi owen ben solo sebulba solo darth utapau. Dagobah darth kessel biggs. Hutt leia luke hoth calamari han sidious han sith. Jawa jar amidala c-3p0 c-3po. Sebulba binks owen twi'lek antilles grievous. Alderaan mon organa droid mara ewok coruscant moff boba. </p>
 
@@ -203,6 +205,7 @@
 
         </section>
 
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="js/retina.js"></script>
