Updated design and content.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Jim and Jamiefest</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -24,10 +24,13 @@
             <nav>
                 <ul id="nav">
                     <li><a href="#announcement"><img src="images/rings-logo.png" alt="Home"></a></li>
-                    <li><a href="#story">Our Story</a></li>
+                    <li><a href="#information">Info</a></li>
+                    <li><a href="#rsvp">RSVP</a></li>
                     <li><a href="#party">Wedding Party</a></li>
-                    <li><a href="#ceremony">Ceremony</a></li>
-                    <li><a href="#registry">Registry</a></li>
+                    <li><a href="#directions">Directions</a></li>
+                    <li><a href="#accomodations">Accomodations</a></li>
+                    <li><a href="#gifts">Gifts</a></li>
+                    <li><a href="#aboutus">About Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -40,9 +43,8 @@
 
                     <div class="col span_6">
 
-                        <h4>Wedding Announcement</h4>
                         <h1>Jim<span>&amp;</span>Jamie</h1>
-                        <h2>get hitched June 14, 2014 @ Leisure Lakes in Chatham, IL</h2>
+                        <h2>June 14, 2014, Chatham, Illinois</h2>
 
                     </div>
 
@@ -50,13 +52,9 @@
 
                 <div class="row">
 
-                    <div class="col span_3">
+                    <div class="col span_6">
                         <a class="btn" href="#registry">View Gift Registry</a>
                         <a class="btn" href="event-1371715146.ics">Save Date to Calendar</a>
-                    </div>
-
-                    <div class="col span_3">
-                        <img src="images/top_image.png">
                     </div>
 
                 </div>
@@ -65,31 +63,69 @@
 
         </section>
 
-        <section id="story">
+        <section id="information">
 
-            <div class="container">
+            <p>Jim and Jamie are getting married at Jamie's Grandma's house in Chatham, Illinois. The wedding and reception will take place outdoors, so please dress accordingly and choose footwear that plays well with grass and gravel.</p>
 
-                <div id="story-text" class="row">
+        </section>
 
-                    <div class="col span_6">
+        <section id="rsvp">
 
-                        <h2>Our Story</h2>
+            <div class="rsvp-form">
 
-                        <img src="images/flourish-about.png" class="flourish">
+                <form action="https://docs.google.com/a/liftux.com/forms/d/1dRqrjCfuV5AYJX4wrEs3IljWfCL64N_HqHbkAxx7xF8/formResponse?embedded=true" method="POST" id="ss-form" target="_self" onsubmit="">
 
-                        <div class="storytext">
+                    <h1>RSVP</h1>
 
-                            <p>Lucas ipsum dolor sit amet jade mustafar leia grievous coruscant darth lando qui-gon yoda solo. Amidala organa greedo lando fisto k-3po binks kenobi. Watto cade ponda sebulba skywalker solo. Baba hutt yavin ventress boba ewok grievous r2-d2 yavin. Yavin mace baba skywalker antilles kessel. Ben c-3p0 qui-gonn organa wedge windu kashyyyk. Hutt greedo bespin skywalker. Fett skywalker hoth kamino yoda lobot grievous wedge. Leia moff luuke binks jinn. Windu hutt fett darth. Thrawn darth windu kashyyyk amidala chewbacca. </p>
+                    <div class="ss-form-question">
+                        <div dir="ltr" class="ss-item ss-item-required ss-text">
+                            <div class="ss-form-entry">
+                                <label aria-hidden="true" class="ss-q-item-label" for="entry_2066599270">
+                                    <div class="ss-q-title">Your Name
+                                        <label for="entry.2066599270" aria-label="(Required field)"></label>
+                                    </div>
+                                    <div class="ss-q-help ss-secondary-text" dir="ltr"></div>
+                                </label>
 
-                            <p>Binks darth luke dooku dagobah skywalker. Jango solo darth sebulba darth ahsoka mara. Mon maul windu darth naboo kit. Jinn hutt skywalker mara cade mandalore mara. Han jawa windu mandalore padmé maul ponda. Mustafar wedge binks mace. Calamari yavin mara ahsoka padmé ponda. Hutt calrissian gonk sidious sidious kit. Darth kessel qui-gon mothma dantooine darth qui-gonn darth. Skywalker han boba solo. Grievous yoda coruscant thrawn grievous sith kessel sidious skywalker. Hutt leia leia leia luuke jade solo han. </p>
-
-                            <p>Yoda palpatine darth sidious yoda darth. Palpatine hutt lando moff. Sidious jawa darth calrissian moff jade. Fisto padmé luuke endor ackbar tatooine. Kashyyyk hutt ponda hutt wicket yoda dagobah. Ewok hutt r2-d2 mustafar binks naboo moff kenobi bespin. Mace leia darth fett moff dantooine darth. Kenobi owen ben solo sebulba solo darth utapau. Dagobah darth kessel biggs. Hutt leia luke hoth calamari han sidious han sith. Jawa jar amidala c-3p0 c-3po. Sebulba binks owen twi'lek antilles grievous. Alderaan mon organa droid mara ewok coruscant moff boba. </p>
-
+                                <input type="text" name="entry.2066599270" value="" class="ss-q-short" id="entry_2066599270" dir="auto" aria-label="Your Name" aria-required="true" required="" title="">
+                            </div>
                         </div>
-
                     </div>
 
-                </div>
+                    <div class="ss-form-question errorbox-good">
+                        <div dir="ltr" class="ss-item ss-item-required ss-select">
+                            <div class="ss-form-entry">
+                                <label aria-hidden="true" class="ss-q-item-label" for="entry_144059868">
+                                    <div class="ss-q-title">Number of Attendees
+                                        <label for="entry_144059868" aria-label="(Required field)"></label>
+                                        <span class="ss-required-asterisk">*</span>
+                                    </div>
+                                    <div class="ss-q-help ss-secondary-text" dir="ltr"></div>
+                                </label>
+
+                                <select name="entry.144059868" id="entry_144059868" aria-label="Number of Attendees  " aria-required="true" required="">
+                                    <option value=""></option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                    <option value="5">5</option>
+                                    <option value="6">6</option>
+                                    <option value="7">7</option>
+                                    <option value="8">8</option>
+                                </select>
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <input type="hidden" name="draftResponse" value="[,,&quot;-6232728934623270003&quot;]
+                    ">
+                    <input type="hidden" name="pageHistory" value="0">
+                    <input type="hidden" name="fromEmail" value="false">
+                    <input type="hidden" name="fbzx" value="-6232728934623270003">
+                    <input type="submit" name="submit" value="Submit" id="ss-submit">
+                </form>
 
             </div>
 
@@ -109,30 +145,38 @@
                 <div class="row">
                     <div class="col span_2">
                         <img src="http://fillmurray.com/g/400/400">
-                        <h3>Bill Murray</h3>
+                        <h3>Cynthia Delaporte</h3>
                     </div>
                     <div class="col span_2">
                         <img src="http://fillmurray.com/g/410/410">
-                        <h3>Bill Murray</h3>
+                        <h3>Stacy Laiderman</h3>
                     </div>
                     <div class="col span_2">
                         <img src="http://fillmurray.com/g/420/420">
-                        <h3>Bill Murray</h3>
+                        <h3>Julie O'Connell Roberts</h3>
+                    </div>
+                    <div class="col span_2">
+                        <img src="http://fillmurray.com/g/420/420">
+                        <h3>Emily Weaver</h3>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col span_2">
                         <img src="http://fillmurray.com/g/401/401">
-                        <h3>Bill Murray</h3>
+                        <h3>Andrew Sturm</h3>
                     </div>
                     <div class="col span_2">
                         <img src="http://fillmurray.com/g/402/402">
-                        <h3>Bill Murray</h3>
+                        <h3>Jason Heeter</h3>
                     </div>
                     <div class="col span_2">
                         <img src="http://fillmurray.com/g/403/403">
-                        <h3>Bill Murray</h3>
+                        <h3>Jason Costello</h3>
+                    </div>
+                    <div class="col span_2">
+                        <img src="http://fillmurray.com/g/403/403">
+                        <h3>Chris Funken</h3>
                     </div>
                 </div>
 
@@ -140,13 +184,13 @@
 
         </section>
 
-        <section id="ceremony">
+        <section id="directions">
 
             <div class="container">
 
                 <div class="row">
                     <div class="col span_6">
-                        <h2>Ceremony</h2>
+                        <h2>Directions</h2>
                         <img class="flourish" src="images/yellow-flourish-ceremony.png">
                     </div>
                 </div>
@@ -157,11 +201,9 @@
                             <div id="map-canvas"></div>
                         </div>
 
-                        <p>Yoda palpatine darth sidious yoda darth. Palpatine hutt lando moff. Sidious jawa darth calrissian moff jade. Fisto padmé luuke endor ackbar tatooine. Kashyyyk hutt ponda hutt wicket yoda dagobah. Ewok hutt r2-d2 mustafar binks naboo moff kenobi bespin. Mace leia darth fett moff dantooine darth. Kenobi owen ben solo sebulba solo darth utapau. Dagobah darth kessel biggs. Hutt leia luke hoth calamari han sidious han sith. Jawa jar amidala c-3p0 c-3po. Sebulba binks owen twi'lek antilles grievous. Alderaan mon organa droid mara ewok coruscant moff boba. </p>
-
-                        <p>1234 Main Street<br>
-                            Anytown, USA 55555-5555<br>
-                            <a href="http://maps.google.com">Directions</a>
+                        <p>7460 Wesley Chapel Rd<br>
+                            Chatham, IL 62629<br>
+                            <a href="https://www.google.com/maps/preview/place/Leisure+Lakes,+Chatham,+IL/@39.6914072,-89.7610558,17z/data=!3m1!4b1!4m2!3m1!1s0x8875419e7374d4a5:0xbf7f2a370020884">Get Directions</a>
                         </p>
                     </div>
                 </div>
