Added new photos and updates.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                     <li><a href="#party">Wedding Party</a></li>
                     <li><a href="#directions">Directions</a></li>
                     <li><a href="#accomodations">Accomodations</a></li>
-                    <li><a href="#gifts">Gifts</a></li>
-                    <li><a href="#aboutus">About Us</a></li>
+                    <!--<li><a href="#gifts">Gifts</a></li>-->
                 </ul>
             </nav>
         </header>
@@ -43,7 +42,7 @@
 
                     <div class="col span_6">
 
-                        <h1>Jim<span>&amp;</span>Jamie</h1>
+                        <img src="images/Floral.jpg" width="360" alt="">
                         <h2>June 14, 2014, Chatham, Illinois</h2>
 
                     </div>
