Updated all information.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
                     <li><a href="#directions">Directions</a></li>
                     <li><a href="#accomodations">Accomodations</a></li>
                     <li><a href="#gifts">Gifts</a></li>
-                    <li><a href="#aboutus">About Us</a></li>
                 </ul>
             </nav>
         </header>
@@ -144,39 +143,24 @@
 
                 <div class="row">
                     <div class="col span_2">
-                        <img src="http://fillmurray.com/g/400/400">
+                        <img src="images/party/cynthia.jpg">
                         <h3>Cynthia Delaporte</h3>
                     </div>
                     <div class="col span_2">
-                        <img src="http://fillmurray.com/g/410/410">
+                        <img src="images/party/stacy.jpg">
                         <h3>Stacy Laiderman</h3>
                     </div>
                     <div class="col span_2">
-                        <img src="http://fillmurray.com/g/420/420">
+                        <img src="images/party/julie.jpg">
                         <h3>Julie O'Connell Roberts</h3>
                     </div>
                     <div class="col span_2">
-                        <img src="http://fillmurray.com/g/420/420">
+                        <img src="images/party/emily.jpg">
                         <h3>Emily Weaver</h3>
                     </div>
-                </div>
-
-                <div class="row">
                     <div class="col span_2">
-                        <img src="http://fillmurray.com/g/401/401">
-                        <h3>Andrew Sturm</h3>
-                    </div>
-                    <div class="col span_2">
-                        <img src="http://fillmurray.com/g/402/402">
-                        <h3>Jason Heeter</h3>
-                    </div>
-                    <div class="col span_2">
-                        <img src="http://fillmurray.com/g/403/403">
-                        <h3>Jason Costello</h3>
-                    </div>
-                    <div class="col span_2">
-                        <img src="http://fillmurray.com/g/403/403">
-                        <h3>Chris Funken</h3>
+                        <img src="images/party/andy.jpg">
+                        <h3>Andy Sturm</h3>
                     </div>
                 </div>
 
@@ -201,13 +185,34 @@
                             <div id="map-canvas"></div>
                         </div>
 
-                        <p>7460 Wesley Chapel Rd<br>
+                        <address>7460 Wesley Chapel Rd<br>
                             Chatham, IL 62629<br>
                             <a href="https://www.google.com/maps/preview/place/Leisure+Lakes,+Chatham,+IL/@39.6914072,-89.7610558,17z/data=!3m1!4b1!4m2!3m1!1s0x8875419e7374d4a5:0xbf7f2a370020884">Get Directions</a>
-                        </p>
+                        </address>
                     </div>
                 </div>
 
+            </div>
+
+        </section>
+
+        <section id="accomodations">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col span_12">
+                        <h2>Accomodations</h2>
+
+                        <p>To reserve a room, please call and let them know you are with the wedding.</p>
+
+                        <img src="images/hotel.jpg" alt="">
+
+                        <address>Courtyard Mariott<br>
+                            3462 Freedom Dr, Springfield, IL 62704<br>
+                            Phone: (217) 793-5300</address>
+
+                    </div>
+                </div>
             </div>
 
         </section>
@@ -226,20 +231,20 @@
 
                 <div class="row">
                     <div class="col span_3">
-                        <a href="http://target.com"><img src="images/target-logo.png"></a>
+                        <a href="http://www.target.com/GiftRegistrySearchViewCmd?registryType=WD&jsRequest=true&catalogId=10051&status=completePage&cumulativeTime=-1&listId=2eCTaTlNNsGEFtI0nhZunw&noOfPings=&registryFirstName=Jamie&langId=-1&segmentGrpName=-1&storeId=10151&registryLastName=Wallace"><img src="images/target-logo.png"></a>
                     </div>
                     <div class="col span_3">
-                        <a href="http://macys.com"><img src="images/macys-logo.png"></a>
+                        <a href="hhttp://www.amazon.com/gp/registry/wedding/17SMIGI8SBV99"><img src="images/amazon-logo.png"></a>
                     </div>
                 </div>
 
                 <div id="gifts" class="row">
                     <div class="col span_6">
                         <h4>Gifts May Be Mailed to</h4>
-                        <p>Jim &amp; Jamie<br>
-                           1234 Main Street<br>
-                           Anytown, USA 55555-5555
-                        </p>
+                        <address>Jim &amp; Jamie<br>
+                            2808 January Ave<br>
+                            Saint Louis, MO 63139-1636
+                        </address>
 
                     </div>
                 </div>
