Added Heeter and Costello images.

--- a/index.html
+++ b/index.html
@@ -251,6 +251,17 @@
                     </div>
                 </div>
 
+                <div class="row">
+                    <div class="col span_2">
+                        <img src="images/party/heeter.jpg">
+                        <h3>Jason Heeter</h3>
+                    </div>
+                    <div class="col span_2">
+                        <img src="images/party/costello.jpg">
+                        <h3>Jason Costello</h3>
+                    </div>
+                </div>
+
             </div>
 
         </section>
